--- a/styles/jLoader.css
+++ b/styles/jLoader.css
@@ -2,7 +2,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-image: url("../images/loader.gif");
+    background-image: url("http://www.gravitymedia.co.za/jLoader/images/loader.gif");
     background-repeat: no-repeat;
     background-position: center;
     background-color: white;
